Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56972

QClipboard::changed() not emmited in XCB env. on other Qt app QClipboard::clear()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.6.3
    • 5.7.0
    • QPA: X11/XCB
    • None
    • Qt 5.7.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 6.2.0 20161027) on "xcb"
      OS: Debian GNU/Linux stretch/sid [linux version 4.8.0-1-amd64]
    • e918605f4238841596a1723a0a8592ec152dc723

      On XCB environment with following scenario

      • two running Qt applications
      • app1 is listening to QClipboard::changed()
      • app2 is setting the clipboard (e.g. with QClipboard::setText()) and then clearing the clipboard with QClipboard::clear()

      the signal QClipboard::changed() is not delivered in app1 for the app2's QClipboard::clear() change.

      Note: the signal QClipboard::changed() is delivered if the QClipboard::clear() is issued in the same app

      Expected behaviour: the signal QClipboard::changed() should be delivered no matter which application does the QClipboard::clear()

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            palinek Palo Kisa
            palinek Palo Kisa
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes